# fastaoc

./: LICENSE  pyproject.toml
fastaoc/: decorator.py  read_puzzle_input.py  submit.py
